[fix] Remove profile background and resolve z-index issue

--- a/app/front-end/src/app/achievements/styles.module.css
+++ b/app/front-end/src/app/achievements/styles.module.css
@@ -7,6 +7,7 @@
 
 .wrapper {
     overflow: auto;
+    width: 98%;
 }
 
 .card_container {
@@ -85,5 +86,5 @@
         box-shadow: 0px 0px 20px var(--clr--white);
         height: 230px;
     }
-    
+
 }
