--- a/app/front-end/src/app/game/(choose-opponent)/styles.module.css
+++ b/app/front-end/src/app/game/(choose-opponent)/styles.module.css
@@ -1,45 +1,47 @@
 h1.cards {
-  font-size: clamp(1rem, 0.8182rem + 0.5818vw, 3rem);
-  color: var(--clr-red);
-  border-top: var(--clr--white);
-  background-color: var(--clr-ldark);
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  width: 300px;
+    font-size: clamp(1rem, 0.8182rem + 0.5818vw, 3rem);
+    color: var(--clr-red);
+    border-top: var(--clr--white);
+    background-color: var(--clr-ldark);
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    width: 250px;
 }
-
+.game_container_s {
+    width: 98%;
+}
 .wrapper {
-  gap: 20px 50px;
-  overflow: auto;
+    gap: 10px 30px;
+    overflow: auto;
 }
 
 div.option {
-  width: 300px;
-  height: 500px;
-  cursor: pointer;
-  transition: all 1s ease;
-  filter: grayscale(80%);
-  border-radius: 25px;
+    width: 250px;
+    height: 500px;
+    cursor: pointer;
+    transition: all 1s ease;
+    filter: grayscale(80%);
+    border-radius: 25px;
 }
 
 div.option:hover {
-  filter: grayscale(0%);
-  scale: 1.1;
+    filter: grayscale(0%);
+    scale: 1.1;
 }
 
 img.cards {
-  background-color: var(--clr-ldark);
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
-  height: 400px;
-    width: 300px;
+    background-color: var(--clr-ldark);
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+    height: 400px;
+    width: 250px;
 }
 
-.buttonS{
+.buttonS {
     background-color: white;
     color: black;
     border-radius: 15px;
-    border:0;
+    border: 0;
     padding: 10px;
     width: 100px;
     text-align: center;
@@ -47,7 +49,7 @@ img.cards {
     transition: all 1s ease;
 }
 
-.buttonS:hover{
+.buttonS:hover {
     background-color: black;
     color: white;
 }
