--- a/app/front-end/src/app/game/(local-tournament)/localTournamentPage.css
+++ b/app/front-end/src/app/game/(local-tournament)/localTournamentPage.css
@@ -1,5 +1,5 @@
 .container_localtournament {
-    width: 99%;
+    width: 98%;
     /* height: 100vh; */
     position: relative;
 }
