--- a/app/front-end/src/app/profile/style.module.css
+++ b/app/front-end/src/app/profile/style.module.css
@@ -1,9 +1,10 @@
 .container {
-    background-image: url('/assets/images/Backgrounds/bg.png');
+    /* background-image: url('/assets/images/Backgrounds/bg.png'); */
     background-size: cover;
     background-position: center;
     backdrop-filter: grayscale(50%) blur(5px);
     overflow: auto;
+    width: 98%;
 }
 
 .bg_holder {
@@ -13,9 +14,9 @@
     bottom: 0;
     margin-top: 7%;
     width: 100%;
-    height: 88%;
+    /* height: 88%; */
     z-index: -2;
-    background-color: rgba(17, 17, 17, 0.9);
+    /* background-color: rgba(17, 17, 17, 0.9); */
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
     border-top: 1px solid #27b299;
